[project]
name = "selfcookie"
version = "0.1.0"
description = "Simple Python Cookiecutter Generator"
authors = [
    {name = "João Pinto", email = "lamego.pinto@gmail.com"},
]
dependencies = [
    "typer>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.scripts]

# git related
push = "git push"
commit = {shell = 'git commit -a -m "{args}" && git push'}
tag = {shell = 'git tag {args} && git push --tags'}
amend = "git commit --amend"
status = "git status"

selfcookie = "python -m selfcookie"

test = "pytest --cov=selfcookie --cov=release --cov-report=term-missing"
# linting
lint = "pre-commit run --all-files"
build = "pdm build"
release =  {composite = ["build", "test", "lint"]}


# docs generation
doc = {shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview"}

# Dependencies below MUST be managed using:
#  pdm add -dG group_name package_name, eg:
#  pdm add -dG  test pytest

[tool.pdm.dev-dependencies]
test = [
    "pdm[pytest]",
    "pytest-cov",
    "pytest>=7.4.0",
]
lint = [
    "pre-commit>=3.3.3",
    "mypy>=1.4.1",
]
release = [
    "jinja2>=3.1.2",
    "setuptools-scm>=7.1.0",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "release",
    "tests"
]

[tool.coverage.run]
omit = [
    "selfcookie/__main__.py",
    "selfcookie/__main__.py",
    "release/__main__.py",
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true


[tool.setuptools_scm]
write_to = "selfcookie/version.py"
