[project]
version = "0.1.11"
name = "selfcookie"
description = "Simple Python Cookiecutter Generator"
authors = [
    {name = "João Pinto", email = "lamego.pinto@gmail.com"},
]
dependencies = [
    "typer>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.scripts]

# git related
push = "git push"
commit = {shell = 'git commit -a -m "{args}" && git push'}
tag = {shell = 'git tag {args} && git push --tags'}
amend = "git commit --amend"
status = "git status"
version = "python -c \"import tomllib; f=open('pyproject.toml', 'rb'); print(tomllib.load(f)['project']['version'])\""

selfcookie = "python -m selfcookie"
test = "pytest --cov=selfcookie --cov-report=term-missing"
# linting
lint = "pre-commit run --all-files"


# release
build = "pdm build"
release=  {composite = ["build", "test", "lint"]}


# docs generation
docs = {shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview"}

# Dependencies below MUST be managed using:
#  pdm add -dG group_name package_name, eg:
#  pdm add -dG  test pytest

[tool.pdm.dev-dependencies]
test = [
    "pdm[pytest]",
    "pytest-cov",
    "pytest>=7.4.0",
]
lint = [
    "pre-commit>=3.3.3",
    "mypy>=1.4.1",
]
release = [
    "jinja2>=3.1.2"
]
docs = [
    "mkdocs>=1.5.2",
    "pymdown-extensions>=10.1",
    "mkdocs-material>=9.1.21",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.coverage.run]
omit = [
    "selfcookie/__main__.py",
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
